Update spring boot version 4 Moved from @MockBean to @MockitoBean And Add Dependancy WebMvc Still needs work > unit test fails